update description and figure two vignette

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,11 @@
-Package: demuxSNP-paper-figures
-Title: What the Package Does (One Line, Title Case)
-Version: 0.0.0.9000
+Package: demuxSNPpaperfigures
+Title: Functions and scripts for demuxSNP paper figures
+Version: 0.0.0.9
 Authors@R: 
-    person("First", "Last", , "first.last@example.com", role = c("aut", "cre"),
+    person("Michael", "Lynch", , "michael.lynch@ul.ie", role = c("aut", "cre"),
            comment = c(ORCID = "YOUR-ORCID-ID"))
-Description: What the package does (one paragraph).
+Description: demuxSNP is a package for supervised demultiplexing of single-cell data.
+    This package produces figures used in the corresponding paper demonstrating it's performacne.
 License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
     license
 Encoding: UTF-8
@@ -12,5 +13,10 @@ Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
 Suggests: 
     knitr,
-    rmarkdown
+    rmarkdown,
+    demuxSNP,
+    SingleCellExperiment,
+    Seurat,
+    demuxmix,
+    dplyr
 VignetteBuilder: knitr
