--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,8 +6,7 @@ Authors@R:
            comment = c(ORCID = "YOUR-ORCID-ID"))
 Description: demuxSNP is a package for supervised demultiplexing of single-cell data.
     This package produces figures used in the corresponding paper demonstrating it's performacne.
-License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
-    license
+License: GPL (>= 3)
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
